--- a/src/app/style/main.css
+++ b/src/app/style/main.css
@@ -83,3 +83,29 @@
     margin-bottom: 80px; 
     font-family: 'Times New Roman', Times, serif
 }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #1976D2;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 0;
+  }
+
+  .dropdown-content a {
+    color: #ffffff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  /* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: black;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block; transition: 2s;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
