--- a/src/app/style/main.css
+++ b/src/app/style/main.css
@@ -776,3 +776,107 @@
     border-color: #1976D2;
     font-size: 16px;
 }
+
+                                /* GET STARTED PAGE STARTS HERE */
+
+
+.getStartedPage{
+    margin-bottom: 40px;
+}
+
+.getstartedFirstDiv{
+    background-image: url(../images/jpeg/banner.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-left: 60px;
+    padding-right: 60px;
+    height: 400px;
+    align-items: center;
+    padding-top: 130px;
+}
+
+.getStartedHeading{
+    margin-left: 100px;
+    color: #1976D2;
+    margin-bottom: 50px;
+}
+
+.getStartedBodyDiv{
+    margin-left: 140px;
+    margin-right: 140px;
+}
+
+.bodyDivOne{
+    display: flex;
+    margin-bottom: 80px;
+}
+
+.loginImageDiv{
+    margin-right: 70px;
+}
+
+.loginImage{
+    width: 400px;
+    height: 390px;
+}
+
+.createAccountParagraph{
+    font-size: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.createAccountBtn{
+    height: 50px;
+    width: 230px;
+    background-color: #1976D2;
+    color: #ffffff;
+    border-color: #1976D2;
+    margin-top: 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.bodyDivTwo{
+    display: flex;
+    margin-bottom: 80px;
+}
+
+.chooseCoursesDiv{
+    margin-right: 70px;
+}
+
+.chooseCoursesImage{
+    width: 400px;
+    height: 390px;
+}
+
+.bodyDivThree{
+    display: flex;
+    margin-bottom: 90px;
+}
+
+.certificateImageDiv{
+    margin-right: 70px;
+}
+
+.certificateImage{
+    width: 400px;
+    height: 390px;
+}
+
+.getCertifiedBtn{
+    height: 50px;
+    width: 230px;
+    background-color: #1976D2;
+    color: #ffffff;
+    border-color: #1976D2;
+    margin-top: 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.knowledgeCityAfricans{
+    font-size: 38px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
