--- a/src/app/style/main.css
+++ b/src/app/style/main.css
@@ -880,3 +880,336 @@
     font-size: 38px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+
+/* ABOUT PAGE STYLE STARTS HERE */
+
+.aboutPage{
+    margin-bottom: 100px;
+}
+
+.aboutFirstDiv{
+    background-image: url(../images/jpeg/banner.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-left: 60px;
+    padding-right: 60px;
+    height: 400px;
+    align-items: center;
+    padding-top: 130px;
+}
+
+.aboutHeading{
+    margin-left: 100px;
+    color: #1976D2;
+}
+
+.aboutBodyDiv{
+    margin-left: 140px;
+    margin-right: 140px;
+    margin-top: 40px;
+}
+
+.aboutThemeHeading{
+    margin-left: 160px;
+    margin-right: 160px;
+}
+
+.themeDiv{
+    display: flex;
+    margin-top: 40px;
+    margin-bottom: 70px;
+}
+
+.themeLeftDiv{
+    margin-right: 40px;
+}
+
+.themeLeftDivTopImage{
+    width: 240px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
+
+.themeLeftDivBottomImage{
+    width: 380px;
+    border-radius: 10px;
+}
+
+.themeMiddleDiv{
+    margin-right: 40px;
+}
+
+.themeMiddleImage{
+    height: 470px;
+    width: 400px;
+    border-radius: 10px;
+}
+
+.themeRightDivTopImage{
+    width: 380px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
+
+.themeRightDivBottomImage{
+    width: 240px;
+    border-radius: 10px;
+}
+
+.aboutPortalHeading{
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.aboutPortalParagraph{
+    font-size: 18px;
+}
+
+.aboutPageMiddleDiv{
+    margin-top: 40px;
+    display: flex;
+    margin-bottom: 80px;
+}
+
+.aboutPageMiddleDivLeft{
+    margin-right: 40px;
+}
+
+.aboutPageMiddleDivRight{
+    margin-top: 40px;
+}
+
+.heading35000{
+    margin-bottom: 20px;
+}
+
+.aboutPageMiddleDivRightFirstParagraph{
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+
+.aboutPageMiddleDivRightSecondParagraph{
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+
+.firstListParagraph{
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.secondListParagraph{
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.thirdListParagraph{
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.fourthListParagraph{
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.awardsMeetButtonDiv{
+    display: flex;
+    margin-bottom: 40px;
+}
+
+.awardsHeadings{
+    font-size: 30px;
+    margin-right: 200px;
+}
+
+.meetHeadings{
+    font-size: 30px;
+    margin-right: 470px;
+}
+
+.joinTeamBtn{
+    width: 130px;
+    font-weight: 800;
+    border-radius: 5px;
+    color: #ffffff;
+    background-color: #1976D2;
+    border-color: #1976D2;
+    cursor: pointer;
+}
+
+.awardYear{
+    margin-right: 10px;
+}
+
+.award2015{
+    margin-bottom: 15px;
+}
+
+.award2016{
+    margin-bottom: 15px;
+}
+
+.award2017{
+    margin-bottom: 15px;
+}
+
+.award2018{
+    margin-bottom: 15px;
+}
+
+.award2019{
+    margin-bottom: 15px;
+}
+
+.award2020{
+    margin-bottom: 15px;
+}
+
+
+.awardYearAndTeamDiv{
+    display: flex;
+}
+
+.awardYearandTitle{
+    font-size: 18px;
+    margin-right: 90px;
+}
+
+.teamMembersAndDetailsDiv{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 35px;
+    font-size: 18px;
+}
+
+.firstTeamMemberDetails{
+    margin-right: 120px;
+}
+
+.secondTeamMemberDetails{
+    margin-right: 120px;
+}
+
+.thirdTeamMemberDetails{
+    margin-right: 120px;
+}
+
+.teamFirstImages{
+    width: 100px;
+    height: 100px;
+    border-radius: 1000px;
+    margin-left: 10px;
+}
+
+.teamSecondImages{
+    width: 100px;
+    height: 100px;
+    border-radius: 1000px;
+    margin-left: 10px;
+}
+
+.teamThirdImages{
+    width: 100px;
+    height: 100px;
+    border-radius: 1000px;
+    margin-left: 5px;
+}
+
+.teamFourthImages{
+    width: 100px;
+    height: 100px;
+    border-radius: 1000px;
+    margin-left: 5px;
+}
+
+.teamMemberName{
+    margin-left: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.teamMemberJob{
+    margin-left: 15px;
+    margin-bottom: 5px;
+}
+
+.teamMemberStars{
+    margin-left: 10px;
+}
+
+
+                /* CONTACT US PAGE STYLES */
+
+.contactUsPage{
+    margin-bottom: 100px;
+}
+
+.contactUsFirstDiv{
+    background-image: url(../images/jpeg/banner.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-left: 60px;
+    padding-right: 60px;
+    height: 400px;
+    align-items: center;
+    padding-top: 130px;
+}
+
+.contactUsHeading{
+    margin-top: 100px;
+    margin-bottom: 80px;
+    text-align: center;
+}
+
+.contactUsBodyDiv{
+    margin-left: 140px;
+    margin-right: 140px;
+}
+
+.contactsDiv{
+    margin-bottom: 40px;
+    background-color: #1976D2;
+}
+
+.customerSupport{
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 20px;
+    width: 350px;
+    height: 200px;
+    margin-top: 40px;
+    background-color: crimson;
+}
+
+.customerSupportHeading{
+    color: #ffffff;
+    margin-bottom: 15px;
+    margin-left: 90px;
+}
+
+.customerSupportLocation{
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    margin-bottom: 10px;
+}
+
+.customerSupportPhoneNumber{
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    margin-bottom: 10px;
+    margin-left: 110px;
+}
+
+.customerSupportEmailAddress{
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    margin-left: 90px;
+}
