--- a/src/app/style/main.css
+++ b/src/app/style/main.css
@@ -12,6 +12,7 @@
     padding-left: 60px;
     padding-right: 60px;
     padding-left: 70px;
+    width: 100%;
     height: 600px;
     display: flex;
     align-items: center;
